2003-01-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/nnshimbun.el (nnshimbun-group-parameters-custom): Show a
	title string; use "pages" instead of "days" for the "index range".

2003-01-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ucs.el (w3m-ucs-to-char): Guard error for Mule-UCS 0.85.

2003-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-byte-optimize-letX): Add
	`pathname-coding-system' to be removed from `let' bindings.

2003-01-26  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* w3m-e21.el (w3m-favicon-type): Add BMP at the head of the list.
	(w3m-favicon-type): Undo the last change and make the priority of
	BMP the lowest.

2003-01-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Withdraw the change of 2003-01-09.

2003-01-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-examine-modules, w3mhack-load-path): Check
	the existence of Gnus for shimbun/nnshimbun.el.

2003-01-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el: Import from Semi-gnus.

2003-01-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-date-regexp): Typo fixed.

2003-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-function-max-args): Don't use the arglist
	destructively.

	* mime-w3m.el (kill-new): Don't refer to the whole arglist of the
	original function.

2003-01-21  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-scroll-down-or-previous-url): Added doc string.

2003-01-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (toplevel): Strict checking that buggy
	`w3m-time-parse-string' is used.

2003-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-reverse-flag): New var.
	(shimbun-savannah-get-headers): Don't use `nreverse'; modify id.

2003-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el: Change it to be based on MHonArc.
	(shimbun-savannah-url): Change the value.