@@ -1,3 +1,7 @@
+2003-01-28  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-local-dirlist-cgi): Treat a `local cookie file'.
+
 2003-01-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/nnshimbun.el (nnshimbun-group-parameters-custom): Show a
